# HFP-Growth

./: CMakeLists.txt  README.md
HAPriori/: CMakeLists.txt  HApriori.cpp  apriori.hpp
HFP-growth/: CMakeLists.txt  FPTree.cpp  FPTree.hpp  HFPGrowth.cpp  HFPGrowth.hpp  main.cpp
IFP-growth/: CMakeLists.txt  FPTree.cpp  FPTree.hpp  IFPGrowth.cpp  IFPGrowth.hpp  main.cpp
data/: abalone.json  mushrooms.json
src/: CMakeLists.txt  statistics.cpp  stringstream.cpp  thread_pool.cpp
src/gimlet/: statistics.hpp  type_traits.hpp  vector.hpp
